TestCases/Errors/Haversine/observations/sst/sum_05_obs.spm
obs r5-c8 0.000477272727272727
error_value r5-c8 0.2
